@@ -1,6 +1,7 @@
 47
 ================
 
+21/06/23 PetFinder: Fix new publishing issues with strays
 21/06/23 Boarding: show fee column, create payment button #623
 20/06/23 New (default) option to delete online forms on process #1297
 19/06/23 Boarding: show relevant info in the animal banner #623
